[package]
name = "bmp085-180-example-embassy-esp32"
version = "0.1.0"
edition = "2021"

[dependencies]
bmp085-180-rs = { path = "../../", features = ["async"] }
embassy-executor = "0.5.0"
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [
    "async",
    "embassy",
    "embassy-executor-thread", # ??
    "embassy-time-timg0",
    "esp32",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = "0.4.20"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
